--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,12 +4,17 @@
       <li class="first active"><%= link_to "#{t("web-app-theme.list", :default => "List")}", messages_path  %></li>
       <li><%= link_to "#{t("web-app-theme.new", :default => "New")}", new_message_path %></li>
     </ul>
-  </div>          
-  <div class="content">          
+  </div>
+  <div class="content">
     <h2 class="title"><%= t("web-app-theme.all", :default => "All")  %> Messages</h2>
+    <% form_tag messages_path, :method => :get do %>
+    <%= text_field_tag :q, params[:q] %>
+    <%= submit_tag "Search" %>
+    <% end %>
     <div class="inner">
       <table class="table">
-        <tr>             
+      <% unless !@messages%>
+        <tr>
           <th class="first">ID</th>
                     <th>
             <%= t("activerecord.attributes.message.body", :default => t("activerecord.labels.body", :default => "Body")) %>
@@ -33,18 +38,20 @@
             <%= link_to "#{t("web-app-theme.edit", :default => "Edit")}", edit_message_path(message) %> |
             <%= link_to "#{t("web-app-theme.delete", :default => "Delete")}", message_path(message), :method => :delete, :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
           </td>
-        </tr>          
+        </tr>
         <% end -%>
       </table>
       <div class="actions-bar wat-cf">
         <div class="actions">
         </div>
-        
+
         <%= will_paginate @messages  %>
-        
+
       </div>
     </div>
+    <% end %>
   </div>
 </div>
 
 <% content_for :sidebar, render(:partial => 'sidebar') -%>
+
