--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,17 @@
       <h1><a href="/">Newsgroups analysis</a></h1>
       <div id="user-navigation">
         <ul class="wat-cf">
-          <li><a href="#"><%= t("web-app-theme.profile", :default => "Profile") %></a></li>
-          <li><a href="#"><%= t("web-app-theme.settings", :default => "Settings") %></a></li>
-          <li><a href="/logout" class="logout"><%= t("web-app-theme.logout", :default => "Logout") %></a></li>
+        <% if !user_signed_in? %>
+          <li><a href="/sign_in"><%= t("web-app-theme.settings", :default => "Settings") %></a></li>
+         <% else %>
+          <li><a href="/dign_out" class="logout"><%= t("web-app-theme.logout", :default => "Logout") %></a></li>
+          <% end %>
         </ul>
       </div>
       <div id="main-navigation">
         <ul class="wat-cf"> <li class="<%= controller.controller_path == 'messages' ? 'active' : '' %>"><a href="<%= messages_path %>">Messages</a></li></ul>
       </div>
-    </div>    
+    </div>
     <div id="wrapper" class="wat-cf">
       <div class="flash">
         <% flash.each do |type, message| -%>
@@ -34,13 +36,14 @@
         <div id="footer">
           <div class="block">
             <p>Copyright &copy; <%= Time.now.year %> Newsgroups analysis.</p>
-          </div>      
+          </div>
         </div>
       </div>
       <div id="sidebar">
         <%= yield :sidebar %>
       </div>
-    </div>    
+    </div>
   </div>
 </body>
 </html>
+
