--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="content">
     <h2 class="title"><%= t("web-app-theme.all", :default => "All")  %> Messages</h2>
-    <% form_tag messages_path, :method => :get do %>
+    <%= form_tag messages_path, :method => :get do %>
     <%= text_field_tag :q, params[:q] %>
     <%= submit_tag "Search" %>
     <% end %>
@@ -19,28 +19,35 @@
                     <th>
             <%= t("activerecord.attributes.message.body", :default => t("activerecord.labels.body", :default => "Body")) %>
           </th>
-                    <th><%= t("web-app-theme.created_at", :default => "Created at")  %></th>
                     <th>
-                    <%= message.category.title %>
+                    Category
                     </th>
-          <th class="last">&nbsp;</th>
+                    <th>
+                    Assigned category
+                    </th>
+
         </tr>
         <% @messages.each do |message| -%>
         <tr class="<%= cycle("odd", "even") %>">
           <td>
             <%= message.id %>
           </td>
-                    <td>
-            <%= link_to message.body, message_path(message) %>
+           <td>
+            <%= link_to message.body[0..150], message_path(message) %>
           </td>
-                    <td>
-            <%= message.created_at %>
+
           </td>
-          <td class="last">
-            <%= link_to "#{t("web-app-theme.show", :default => "Show")}", message_path(message) %> |
-            <%= link_to "#{t("web-app-theme.edit", :default => "Edit")}", edit_message_path(message) %> |
-            <%= link_to "#{t("web-app-theme.delete", :default => "Delete")}", message_path(message), :method => :delete, :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
+          <td>
+          <%= message.category.title %>
           </td>
+          <td>
+          <%= message.assigned_category.downcase %>
+          </td>
+
+            <%#= link_to "#{t("web-app-theme.show", :default => "Show")}", message_path(message) %>
+            <%#= link_to "#{t("web-app-theme.edit", :default => "Edit")}", edit_message_path(message) %>
+            <%#= link_to "#{t("web-app-theme.delete", :default => "Delete")}", message_path(message), :method => :delete, :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
+
         </tr>
         <% end -%>
       </table>
