added total number of documents

--- a/app/views/messages/_sidebar.html.erb
+++ b/app/views/messages/_sidebar.html.erb
@@ -3,6 +3,9 @@
   <div class="content">
     <p>Number of properly classified messages: <%= @cl_result %></p>
     <p>Number of messages: <%= @total_messages %></p>
+    <% if @total_hits %>
+    <p>Documents found: <%= @total_hits %>
+    <% end %>
   </div>
 </div>
 <div class="block">
